--- a/css/basic.css
+++ b/css/basic.css
@@ -13,6 +13,10 @@ body {
   width: 100%;
   font-size: 24px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
