--- a/css/basic.css
+++ b/css/basic.css
@@ -1,3 +1,4 @@
+html,
 body {
   background-color: #e1dcd0;
   color: #2f2939;
@@ -6,6 +7,9 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainContainer {
