--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+main {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .chooseFunction {
   padding: 20px;
   margin-top: 60px;
